# papertrail

./: README.md  pyproject.toml
.github/workflows/: generate.yml
papertrail/: charts.py  cli.py  config.py  fetchers.py  heatmap.py  store.py
profile/: README.md.template  generate.py
tests/: test_charts.py  test_heatmap.py  test_stats.py  test_store.py
